artifacthub/library/general/disallowedtags/1.0.2/samples/container-image-must-not-have-latest-tag/example_disallowed_tag.yaml
apiVersion: v1
kind: Pod
metadata:
  name: opa-disallowed-2
spec:
  containers:
    - name: opa
      image: openpolicyagent/opa:latest
      args:
        - "run"
        - "--server"
        - "--addr=localhost:8080"
