artifacthub/library/general/disallowedtags/1.0.2/suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: disallowedtags
tests:
- name: disallowed-tags
  template: template.yaml
  constraint: samples/container-image-must-not-have-latest-tag/constraint.yaml
  cases:
  - name: allowed
    object: samples/container-image-must-not-have-latest-tag/example_allowed.yaml
    assertions:
    - violations: no
  - name: exempt-images-with-disallowed-tags
    object: samples/container-image-must-not-have-latest-tag/example_exempt_image_w_disallowed_tag.yaml
    assertions:
    - violations: no
  - name: no-tag
    object: samples/container-image-must-not-have-latest-tag/example_no_tag.yaml
    assertions:
    - violations: yes
  - name: no-tag-with-port
    object: samples/container-image-must-not-have-latest-tag/example_no_tag_w_port.yaml
    assertions:
    - violations: yes
  - name: single-disallowed-tag
    object: samples/container-image-must-not-have-latest-tag/example_disallowed_tag.yaml
    assertions:
    - violations: yes
  - name: single-disallowed-tag-ephemeral
    object: samples/container-image-must-not-have-latest-tag/disallowed_tag_ephemeral.yaml
    assertions:
    - violations: yes
  - name: some-disallow-tags
    object: samples/container-image-must-not-have-latest-tag/example_some_disallowed_tags.yaml
    assertions:
    - violations: yes
